[package]
name = "benten-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Storage abstraction (KVBackend trait) and redb implementation for the Benten graph engine."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
# `test-fixtures` gates the `write-canonical-and-exit` binary target so a
# downstream `cargo install benten-graph --no-default-features` does not
# pay the compile-time cost of a test-only fixture. The feature is
# default-enabled so `cargo test`, `cargo nextest run --workspace`, and
# every developer workflow continue to build the bin without ceremony;
# publishers who want the library-only subset opt out explicitly.
#
# Closure of Named Compromise #7 (`[[bin]]` required-features gating).
# G11-A Wave 3a DOC-REGRESSION: the compromise #7 regression test pins
# three literal substrings in this file:
#   - `required-features = ["test-fixtures"]` on the `[[bin]]` section
#   - `test-fixtures = []` as the feature declaration
#   - `default = ["test-fixtures"]` as the default feature set
# The ACTIVE TOML below preserves all three. Wave-1 mini-review
# MODERATE-3 (d333737) previously piggy-backed `testing` into `default`
# to auto-light the runtime-bookkeeping instrumentation during `cargo
# test` / `cargo nextest run`, which broke the compromise #7 literal
# pin and got the test temporarily skipped in CI. Wave 3a un-skips by
# restoring the original single-element `default` and having CI pass
# `--features benten-graph/testing` explicitly alongside
# `benten-eval/testing` / `benten-engine/test-helpers` — Wave-1
# MODERATE-3's "CI picks the feature up automatically" invariant still
# holds because the explicit feature flag is part of the gating
# workflow's `cargo build` / `cargo nextest run` / `cargo clippy`
# command (see `.github/workflows/ci.yml`). Production
# `cargo install benten-graph --no-default-features` continues to
# strip both the bin AND the instrumentation.
default = ["test-fixtures"]
test-fixtures = []
# G13-C wave-3 (Phase-3 R5; CLAUDE.md baked-in #17): gates the
# `BrowserBackend` in-RAM thin-client cache for `wasm32-unknown-unknown`
# browser tabs. NOT default-enabled — the native CI surface continues to
# build only the redb-backed backend; downstream consumers (notably the
# napi cdylib's browser-target build) opt in via
# `--features benten-graph/browser-backend`.
#
# **Load-bearing scope (CLAUDE.md baked-in #17):** thin-client cache
# only — no transactions, no subscribers, no sync state, no IndexedDB
# persistence (that ships separately as the browser-blob-backend at
# G18-A). The `redb` dep is target-conditional; this feature MUST NOT
# pull redb into the wasm32 link. See `crates/benten-graph/src/
# browser_backend.rs` module docs for the full thin-client commitment.
browser-backend = []
# ADDL Phase-4-Meta-Core TF-1 RED-PHASE staging (pim-12 / §3.6e). Gates the
# `tests/tf1_989_cross_did_partition_isolation.rs` cross-DID non-leak
# canary suite, which references the #989 production surface
# (`WriteContext::namespace_did` + `RedbBackend::scoped(..)` per-DID view)
# that does NOT exist until G-CORE-1 lands. NOT default-enabled so the
# workspace keeps compiling pre-implementation. The G-CORE-1 implementer
# REMOVES this feature + the file's `#![cfg(..)]` gate + lifts the
# `#[ignore]`s in the SAME wave (the un-ignore action the closing-wave
# sweep + mini-reviewer verify per §3.6e — landing-status, not just
# spec-pin presence). Untouched: the compromise-#7-pinned `default = [
# "test-fixtures"]` / `test-fixtures = []` literals above.
tf1_989_red_phase = []
# `testing` gates the test-only instrumentation that would otherwise grow
# unboundedly at runtime: the `test_event_log`, the `warmed` HashSet inside
# `CidExistenceCache`, and the `last_durability_by_label` map. Matches the
# `benten-eval/testing` feature pattern (G11-A alignment). NOT default-
# enabled because the compromise #7 regression pins `default = [
# "test-fixtures"]` as a single-element array (see comment above); CI
# activates it explicitly via `--features benten-graph/testing`.
# Production `cargo install benten-graph --no-default-features` strips
# the bookkeeping away entirely (no `warmed` HashSet, no `test_event_log`,
# no `last_durability_by_label`) — fulfilling the commit-message claim in
# `be8f6ea` that these accumulation surfaces "no longer accumulate [in
# production builds]".
testing = []

[dependencies]
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
# G11-A Wave 3a: hash-check on the subgraph storage path
# (`store_subgraph` / `load_subgraph_verified`) recomputes BLAKE3 over the
# canonical DAG-CBOR bytes. Using the workspace dep keeps the algorithm
# lockstep with `benten-core`'s CID hashing.
blake3 = { workspace = true }
# Phase-2b G10-A-wasip1 (D10-RESOLVED): the snapshot-blob payload struct
# (`backends/snapshot_blob.rs::SnapshotBlob`) derives Serialize +
# Deserialize so DAG-CBOR canonical-bytes encoding round-trips through
# `serde_ipld_dagcbor`. Workspace dep — same `default-features = false`
# / `derive` / `alloc` posture as benten-core consumes.
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
thiserror = { workspace = true }

# G13-C wave-3 (Phase-3 R5; CLAUDE.md baked-in #17 + br-r1-1 BLOCKER): the
# `redb` dependency is target-conditional. Native targets (x86_64-* /
# aarch64-* / wasm32-wasip1) compile redb + the `RedbBackend` impl. The
# `wasm32-unknown-unknown` browser-tab target does NOT pull redb — the
# browser bundle uses the in-RAM `BrowserBackend` (feature-gated above)
# and persistence flows through IndexedDB via the browser-blob-backend
# infrastructure landed at G18-A. See `crates/benten-graph/src/
# browser_backend.rs` module docs + `.addl/phase-2b/wave-8j-wasm-browser-
# bundle-bisect.md` § Phase-3 follow-up.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
redb = { workspace = true }

# `wasm32-wasip1` is a NATIVE-shape target (full filesystem access via
# WASI preview-1), so redb compiles + works there. The exclusion is
# specifically `wasm32-unknown-unknown` (browser tabs) per the
# thin-client commitment.
[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
redb = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
# Cross-process graph integration test (`d2_cross_process_graph.rs`) opens
# the engine to round-trip a persisted node. Dev-dep cycle is safe.
#
# G11-A Wave 2a: `features = ["test-helpers"]` because the
# `test-helpers` default was flipped off on benten-engine; the helpers
# stay available for these integration tests under the explicit opt-in.
benten-engine = { path = "../benten-engine", features = ["test-helpers"] }
# Phase 2a: `capability_grant_writes_immediate.rs` imports
# `CapabilityGrant` / `GrantScope` directly from benten-caps.
benten-caps = { path = "../benten-caps" }

[[bin]]
# Test-fixture binary used by d2_cross_process_graph.rs to prove PID
# separation. Writes the canonical fixture node to the path given in
# argv[1] then exits. Kept lean so the spawn cost on `cargo test` is
# tolerable. CARGO_BIN_EXE_write-canonical-and-exit is resolved by the
# test via the `env!()` macro.
name = "write-canonical-and-exit"
path = "bin/write_canonical_and_exit.rs"
# `required-features` guard keeps the binary out of `cargo install
# benten-graph --no-default-features` (Named Compromise #7 closure).
# `test = false` / `bench = false` keep the bin out of `cargo test` /
# `cargo bench` target discovery.
required-features = ["test-fixtures"]
test = false
bench = false

[[bench]]
name = "get_create_node"
harness = false

[[bench]]
name = "durability_modes"
harness = false

[[bench]]
name = "concurrent_writers"
harness = false

[[bench]]
name = "multi_mb_roundtrip"
harness = false

[[bench]]
name = "crud_post_create_dispatch_group_durability"
harness = false

[[bench]]
# G11-A: MVCC read latency during 0 / 1 / 4 / 16 concurrent writers.
# Informational, not a gate — see the bench module docs.
name = "mvcc_read_latency"
harness = false
