[package]
name = "benten-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Phase-3 G14-A1 canary stub — Ed25519 keypair + did:key + UCAN. Real impls land at G14-A1; this is the test-shell that R3-A test pins compile against."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness. Mirrors crates/benten-core/Cargo.toml.
bench = false

# G14-A1 wave-4a fills these dependencies (`ed25519-dalek` 2.x + `ssi` 0.7.x +
# `blake3` + `serde_ipld_dagcbor` + `zeroize` + `secrecy` + `subtle` + `getrandom`
# per crypto-blocker-1 + crypto-major-2 + crypto-major-4 + crypto-major-5 +
# sec-r1-11). Stub keeps the dep list empty so the crate compiles as an empty
# rlib at R3-A landing time; R3-A test pins live under `tests/` and remain
# `#[ignore]`'d (RED-PHASE: lands at R5 G14-A1).
[dependencies]

[dev-dependencies]
# Proptest carries the 10 000-case property suite (`prop_keypair_generate_distinct_across_1k_calls`,
# `prop_keypair_from_seed_bytes_arbitrary_input_no_panic`, `prop_did_key_round_trip_byte_identity`,
# `prop_ucan_chain_attenuation_never_widens_authority`). All proptest blocks
# stay `#[ignore]`'d at R3 RED-phase; G14-A1 implementer un-ignores once the
# real impls land.
proptest = { workspace = true }
