[package]
name = "benten-id"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Identity primitives for the Benten engine — Ed25519 keypair + did:key + UCAN chain validation + VC + multi-sig surface + DID rotation + device-attestation primitive (post-COLLAPSE: pure primitive, no acceptance pipe) + plugin-DID mint/store + sibling GrantReader trait."

[lints]
workspace = true

[features]
# `testing` exposes test-only constructors (e.g.
# `plugin_did::handle_with_did_for_test`) needed by integration-test
# suites that exercise defensive-return paths which cannot be driven
# via the production-only mint() API. NOT for production callers.
#
# Surf-1 #862 — DISAGREE-WITH-EXPLANATION (HARD RULE 12 (c)). The
# finding proposed either removing the feature or making it default-on.
# Both are rejected: (a) the feature DOES have a consumer — the
# `plugin_did_store_insert_duplicate_rejected` required-features test
# below (R6-FP-3 cap-r6-r3-1 substantive arm); removing it deletes a
# real security-pin's only construction path; (b) default-on would
# expose `handle_with_did_for_test` (an intentionally-unsound
# DID/keypair-unbound constructor) to production builds — the exact
# hazard this feature gate exists to prevent. The genuine residual
# (a feature-less `cargo test --workspace` silently skips the gated
# arm) is a workspace CI-config concern OUTSIDE benten-id's lane and
# is NOT a defect of this feature's design. `cargo test -p benten-id
# --features testing` runs the arm green (verified).
testing = []

[lib]
# Disable the implicit libtest bench harness. Mirrors crates/benten-core/Cargo.toml.
bench = false

# R6-FP-3 cap-r6-r3-1 substantive test pin: requires `testing` feature to
# expose `handle_with_did_for_test` constructor. Marked `required-features`
# so `cargo test --workspace` silently skips it (rather than failing the
# import) when the feature isn't enabled.
[[test]]
name = "plugin_did_store_insert_duplicate_rejected"
required-features = ["testing"]

# Per arch-r1-10: benten-id MUST NOT depend on benten-graph / benten-engine /
# benten-eval / benten-caps. The `tests/dependency_edges.rs` pin enforces this
# (rejects the forbidden set). The allowed set below covers crypto-blocker-1 /
# crypto-major-2 / crypto-major-4 / crypto-major-5 / crypto-minor-3.
[dependencies]
# G27-C wave (Phase 4-Foundation §4.3): `benten-core::Cid` is the typed
# handle the new `grant_reader::GrantReader::has_unrevoked_grant_for_grant_cid`
# trait method takes. `benten-core` is the foundational data-shape crate +
# is NOT in the arch-r1-10 forbidden set (benten-graph / benten-engine /
# benten-eval / benten-caps / benten-ivm / benten-sync / benten-dsl-compiler).
# Mirrors the precedent at `crates/benten-caps/Cargo.toml` line 21.
benten-core = { path = "../benten-core" }
# R6-FP-3 (cap-r6-r3-1): `PluginDidStore::insert` returns
# `Result<(), ErrorCode>` with `ErrorCode::PluginDidHandleDuplicate`
# for defensive-return hardening. `benten-errors` is NOT in the
# arch-r1-10 forbidden set; pure-data crate at the bottom of the
# workspace dep graph.
benten-errors = { workspace = true }
# Ed25519 signing + verifying (plan §3 G14-A1 row). Routed through
# `benten-crypto-suite::primitives::ed25519_dalek` per G-CORE-2 (#1300) —
# the integration crate is the ONLY workspace direct-dep on ed25519-dalek
# (crypto-agility-contract:6 — `crypto-agility-contract:6`).
benten-crypto-suite = { path = "../benten-crypto-suite" }
# Secret-bytes hygiene (crypto-blocker-1 BLOCKER): `Zeroize` +
# `ZeroizeOnDrop` derives on the `SecretKey` newtype + redacted Debug.
# `secrecy` is intentionally NOT pulled in — the redacted Debug + no-Clone
# discipline is hand-rolled with zeroize alone, which keeps the dep
# surface minimal and the test-pin call-site groutable. (Per Q3 IFF
# disagree-with-explanation: brief listed `secrecy` as a candidate but
# the test contract names assertions on raw bytes layout, not on
# `Secret<T>` wrappers; pulling secrecy would add an indirection layer
# without adding a test-pin-named guarantee.)
zeroize = { workspace = true }
# Constant-time comparison primitive (crypto-major-4).
subtle = { workspace = true }
# OS CSPRNG primitive (crypto-major-2). Direct dep so the import-path
# audit tests can grep the call site.
getrandom = { workspace = true }
rand_core = { workspace = true }
# DAG-CBOR canonical-bytes envelope (crypto-major-5).
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
# did:key base58btc (multibase prefix `z`) — crypto-minor-3.
bs58 = { workspace = true }
# Typed-error mapping.
thiserror = { workspace = true }

[dev-dependencies]
# Proptest carries `prop_keypair_generate_distinct_across_1k_calls`,
# `prop_keypair_from_seed_bytes_arbitrary_input_no_panic`, and
# `prop_did_key_round_trip_byte_identity`. UCAN attenuation proptest
# remains G14-A2 scope.
proptest = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
