[package]
name = "benten-ivm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Incremental View Maintenance for the Benten graph engine — Phase 1 hand-written views (capability grants, event dispatch, content listing, governance inheritance, version current)."

[lints]
workspace = true

[lib]
# Disable the implicit libtest bench harness so `cargo bench --workspace`
# passes Criterion CLI flags through without libtest rejecting them. See
# benten-core/Cargo.toml for the longer rationale.
bench = false

[features]
# G8-A (Phase 2b R5): flipped `phase_2b_landed` ON by default now that the
# `Strategy`, `algorithm_b::AlgorithmBView`, and `testing::*` surfaces have
# landed. Pre-G8-A this feature gated R3 red-phase tests against
# pre-implementation APIs.
default = ["phase_2b_landed"]
# `phase_2b_landed` — see benten-eval/Cargo.toml for the rationale.
phase_2b_landed = []

[dependencies]
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
benten-graph = { path = "../benten-graph" }
thiserror = { workspace = true }
# G8-A: testing module's `criterion_estimates_mean_ns` parses Criterion
# output for the bench gate. Behind `phase_2b_landed`, but listed
# unconditionally to keep the dependency graph stable across feature flips.
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
blake3 = { workspace = true }

[[bench]]
name = "view_maintenance"
harness = false

[[bench]]
# G11-A: view staleness transition cost. Informational, not gated.
name = "view_staleness_transition"
harness = false

[[bench]]
# G8-A (Phase 2b): Algorithm B (Strategy::B) vs hand-written (Strategy::A)
# per-view comparison. Gated by ratio (B/A ≤ 1.20) via the companion
# `tests/algorithm_b_within_20pct_gate.rs`. Per-view ceilings live in
# `benches/algorithm_b_thresholds.toml`.
name = "algorithm_b_vs_handwritten"
harness = false
