[package]
name = "benten-platform-foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Phase 4-Foundation platform-foundation crate — schema-driven rendering compiler (G23-A) + materializer pipeline (G23-B) + Renderer trait + plugin manifest schema (G24-D) + install/uninstall/upgrade lifecycle + plugin library + meta-plugin composition. 11th workspace crate per D-4F-2 ratification. R3 RED-PHASE skeleton; G23-A/B + G24-D fill substantive content."
publish = false

[lints]
workspace = true

[lib]
path = "src/lib.rs"
bench = false

[dependencies]
# Per D-4F-2 + arch-r1-1: depends on benten-core (Subgraph/SubgraphSpec types)
# + benten-errors (ErrorCode) + benten-id (Did for plugin-DID + peer-DID
# concepts per CLAUDE.md #18); MUST NOT depend on benten-eval or benten-graph
# (preserves arch-1 / arch-r1-15).
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
benten-id = { path = "../benten-id" }
# G24-D — canonical-bytes DAG-CBOR + BLAKE3 content hashing + Ed25519
# verification for the FULL plugin manifest schema per CLAUDE.md #18.
blake3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_ipld_dagcbor = { workspace = true }
ed25519-dalek = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
benten-engine = { path = "../benten-engine" }
# walkdir for R4-FP-4 substantive grep-walk pin
# (`plugin_did_is_ucan_audience_handle_not_attested_sub_identity.rs`
# negative-arm walks `crates/benten-id/src/` for forbidden
# device-DID-attestation patterns per CLAUDE.md baked-in #18).
walkdir = "2.5"
