[package]
name = "benten-renderer-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Phase-4-Foundation Tauri 2.x renderer backend — engine extension per CLAUDE.md #19. Embedded-webview host for the wasm32-unknown-unknown admin UI v0 bundle via in-process IPC. Compile-time-linked Rust crate hosting an IpcAllowlist + per-method cap-binding + locked CSP, sharing the DidKeyedSession + SessionToken contract with the G24-F thin-client HTTP/fetch transport-swapped to in-process channel (br-r1-14)."

[lints]
workspace = true

[lib]
bench = false

# Phase-4-Foundation G24-E wave-7. The Tauri 2.x renderer is an engine
# extension per CLAUDE.md #19 — compile-time-linked Rust crate trusted
# via the cargo + code-review boundary, NOT through UCAN or
# `read_node_as`. The crate provides:
#
# - `IpcAllowlist` — explicit method-name allowlist for the in-process
#   webview ↔ engine channel (T3 defense rung 1).
# - `TauriRenderer::dispatch_ipc` — per-method capability check via the
#   admin UI v0 manifest's `requires` envelope (T3 defense rung 2).
# - `TauriRenderer::webview_csp_header` — locked CSP at webview load
#   (T3 defense rung 3); rejects `'unsafe-eval'` + `'unsafe-inline'`.
# - In-process session bridge — reuses `DidKeyedSession` from
#   `benten-engine` so shape (b) browser-tab and shape (c) embedded-
#   webview share ONE auth contract (br-r1-14).
# - `tauri-runtime-verso` swap-readiness — transport-agnostic methods
#   on the `Renderer` trait (br-r1-9; Verso is a post-v1 swap target).
[dependencies]
benten-core = { path = "../benten-core" }
benten-errors = { workspace = true }
benten-engine = { path = "../benten-engine" }
benten-platform-foundation = { path = "../benten-platform-foundation" }
thiserror = { workspace = true }
serde_json = { workspace = true }

# [dev-dependencies] intentionally empty — all required deps are
# already in [dependencies] above; tests/ + benches/ inherit them.
# Prior R6-FP cycles had a redundant dev-dependencies block duplicating
# the production-deps list (each crate showing up with both `kind: None`
# and `kind: dev` in `cargo metadata`); R6-FP-5 arch-r6-r5-1 closure
# removed it. Sister crate benten-platform-foundation correctly keeps
# only test-specific deps (benten-engine as a real dev-only-cap-policy
# test scaffold) in its [dev-dependencies] block.
