[package]
name = "phase-3-integration-tests"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

# Phase-3 workspace-level integration test package. Hosts cross-cutting
# end-to-end pins that span multiple crates (atrium browser thin-client,
# multi-peer atrium sync, two-process bidirectional sync, etc.).
#
# Files hosted here as RED-PHASE pins land via R3-B/R3-C/R3-D:
#
# - `atrium_browser_thin_client.rs` — R3-B owns the full-peer-side
#   filtering pin; R3-D extends with browser-side IndexedDB cache
#   assertion. Per r2-test-landscape §13 ambiguous-ownership pre-emption,
#   both R3 agents share the file with disjoint test-fn ownership.
#
# Future R3-C / R3-D files (atrium_two_peer.rs, atrium_three_peer.rs,
# atrium_two_process.rs, atrium_two_device.rs) land in subsequent R3
# dispatches per r2-test-landscape §13 partition table.

[lib]
path = "src/lib.rs"
doctest = false
bench = false

[[test]]
name = "atrium_browser_thin_client"
path = "atrium_browser_thin_client.rs"

[dependencies]

[lints]
workspace = true
